Update colume choice in specifiq data.

--- a/agoda_creating_json_format.ipynb
+++ b/agoda_creating_json_format.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0ade6a22-b871-4ea8-baf7-5211a093a3bd",
+   "metadata": {},
+   "source": [
+    "# Creating json format"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b3b80b3f-0f3d-4cd5-81b0-b5f78d42aff8",
    "metadata": {},
    "source": [
-    "## Import libarey for create json file "
+    "### Import libarey for create json file "
    ]
   },
   {
@@ -793,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
