--- a/database_with_jupyter.ipynb
+++ b/database_with_jupyter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1ebe16a2-a046-4c1b-91fb-32b3b853a006",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "a515b6c0-8912-4032-82e5-2d7be497ece3",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6db7dae1-a288-4224-ae4d-1e7b3937e06d",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "21b7f98e-d49e-4b77-9146-425688f286c0",
    "metadata": {},
    "outputs": [
@@ -112,6 +112,9 @@
      "output_type": "stream",
      "text": [
       "Tables in the database 'itt_master_contents':\n",
+      "hotel_info_all\n",
+      "hotels_info_with_gidestination_code\n",
+      "vervotech_ProviderFamily\n",
       "vervotech_hotel_list\n",
       "vervotech_hotel_map_new\n",
       "vervotech_hotel_map_update\n",
@@ -144,10 +147,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9fa68b2d-06dd-4e72-96a0-0ca15642b740",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Id             last_update VervotechId UpdateDateFormat  \\\n",
+      "0          1  2024/10/15 17:04:09 PM    70487877             None   \n",
+      "1          2  2024/10/15 17:04:09 PM    70477374             None   \n",
+      "2          3  2024/10/15 17:04:09 PM    70488525             None   \n",
+      "3          4  2024/10/15 17:04:09 PM    70488538             None   \n",
+      "4          5  2024/10/15 17:04:09 PM    70480802             None   \n",
+      "...      ...                     ...         ...              ...   \n",
+      "10269  10270  2024/11/04 01:00:09 AM    70491879             None   \n",
+      "10270  10271  2024/11/04 01:00:09 AM    70490902             None   \n",
+      "10271  10272  2024/11/04 01:00:09 AM    70492469             None   \n",
+      "10272  10273  2024/11/04 01:00:09 AM    70492842             None   \n",
+      "10273  10274  2024/11/04 01:00:09 AM    70490907             None   \n",
+      "\n",
+      "      ProviderHotelId ProviderFamily ChannelIds ProviderLocationCode  \\\n",
+      "0           100321969            EAN       None                 None   \n",
+      "1           100335387            EAN       None                 None   \n",
+      "2           100521320            EAN       None                 None   \n",
+      "3           100737301            EAN       None                 None   \n",
+      "4           100927090            EAN       None                 None   \n",
+      "...               ...            ...        ...                  ...   \n",
+      "10269         6296787            TBO       None               134367   \n",
+      "10270         6298509            TBO       None               134367   \n",
+      "10271         6303195            TBO       None               132109   \n",
+      "10272         6306213            TBO       None               132109   \n",
+      "10273         6306680            TBO       None               132109   \n",
+      "\n",
+      "                       status          created_at          ModifiedOn  \n",
+      "0      Update data successful 2024-10-18 10:53:00 2024-10-19 12:52:46  \n",
+      "1      Update data successful 2024-10-18 10:53:00 2024-10-19 12:52:46  \n",
+      "2      Update data successful 2024-10-18 10:53:00 2024-10-19 12:52:46  \n",
+      "3               Skipping data 2024-10-18 10:53:00 2024-10-19 12:52:46  \n",
+      "4      Update data successful 2024-10-18 10:53:00 2024-10-19 12:52:46  \n",
+      "...                       ...                 ...                 ...  \n",
+      "10269  Update data successful 2024-11-03 17:00:10 2024-11-03 19:03:59  \n",
+      "10270  Update data successful 2024-11-03 17:00:10 2024-11-03 19:04:01  \n",
+      "10271  Update data successful 2024-11-03 17:00:10 2024-11-03 19:04:03  \n",
+      "10272  Update data successful 2024-11-03 17:00:10 2024-11-03 19:04:05  \n",
+      "10273  Update data successful 2024-11-03 17:00:10 2024-11-03 19:04:08  \n",
+      "\n",
+      "[10274 rows x 11 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "def total_data_count(table, engine):\n",
     "    query = f\"SELECT * FROM {table}\"\n",
@@ -793,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
