--- a/database_with_jupyter.ipynb
+++ b/database_with_jupyter.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.0 (tags/v3.12.0:0fb18b0, Oct  2 2023, 13:03:39) [MSC v.1935 64 bit (AMD64)]\n"
+      "3.12.7 (tags/v3.12.7:0b05ead, Oct  1 2024, 03:06:41) [MSC v.1941 64 bit (AMD64)]\n"
      ]
     }
    ],
@@ -114,6 +114,7 @@
       "Tables in the database 'itt_master_contents':\n",
       "hotel_info_all\n",
       "hotels_info_with_gidestination_code\n",
+      "innova_hotels_main\n",
       "vervotech_ProviderFamily\n",
       "vervotech_hotel_list\n",
       "vervotech_hotel_map_new\n",
@@ -135,6 +136,34 @@
     "        print(f\"No tables found in the database '{db_name}'\")\n",
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bf723193-4477-4f0d-a840-a9b846cb421f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HotelBeds', 'TBO', 'EAN', 'MGHoliday', 'Agoda']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_provider_family_active_list(table, engine):\n",
+    "    query = f\"SELECT ProviderFamily FROM {table} WHERE status = 'active'\"\n",
+    "    df = pd.read_sql(query, engine)\n",
+    "\n",
+    "    provider_family_active_list = provider_families = df['ProviderFamily'].tolist()\n",
+    "    return provider_family_active_list\n",
+    "\n",
+    "get_provider_family_name('vervotech_ProviderFamily', engine)"
    ]
   },
   {
@@ -202,7 +231,7 @@
     "def total_data_count(table, engine):\n",
     "    query = f\"SELECT * FROM {table}\"\n",
     "    df = pd.read_sql(query, engine)\n",
-    "    print(df)\n",
+    "    # print(df)\n",
     "\n",
     "total_data_count(table=\"vervotech_hotel_map_new\", engine=engine)"
    ]
@@ -843,7 +872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
