Make csv file function.

--- a/database_with_jupyter.ipynb
+++ b/database_with_jupyter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1ebe16a2-a046-4c1b-91fb-32b3b853a006",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.7 (tags/v3.12.7:0b05ead, Oct  1 2024, 03:06:41) [MSC v.1941 64 bit (AMD64)]\n"
+      "3.12.0 (tags/v3.12.0:0fb18b0, Oct  2 2023, 13:03:39) [MSC v.1935 64 bit (AMD64)]\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a515b6c0-8912-4032-82e5-2d7be497ece3",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6db7dae1-a288-4224-ae4d-1e7b3937e06d",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "21b7f98e-d49e-4b77-9146-425688f286c0",
    "metadata": {},
    "outputs": [
@@ -136,6 +136,70 @@
     "        print(f\"No tables found in the database '{db_name}'\")\n",
     "except Exception as e:\n",
     "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60fdf13d-eb0a-4857-b7a1-7eb7b44ce89b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69dcad79-7a07-484a-bf28-3deac45716c6",
+   "metadata": {},
+   "source": [
+    "### Get data some rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7a274089-79dd-43d0-9b9d-5121900950d8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to HotelData.csv successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def get_some_rows(table, engine, limit):\n",
+    "    query = f\"SELECT * FROM {table} LIMIT {limit}\"\n",
+    "    try:\n",
+    "        # Use a context manager for automatic transaction handling\n",
+    "        with engine.connect() as connection:\n",
+    "            df = pd.read_sql(query, connection)\n",
+    "            df.to_csv(\"HotelData.csv\", index=False)\n",
+    "            print(\"Data saved to HotelData.csv successfully.\")\n",
+    "        return df\n",
+    "    except SQLAlchemyError as e:\n",
+    "        # Explicitly roll back if any SQL error occurs\n",
+    "        connection.rollback()\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "        raise  # Re-raise the error after rollback for debugging\n",
+    "\n",
+    "# Usage example\n",
+    "table = \"vervotech_hotel_list\"\n",
+    "data = get_some_rows(table, engine, 100000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6156ea6c-a085-4a1e-a8e5-ca56431233ee",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Active suplayer check."
    ]
   },
   {
@@ -872,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
