Add jupyter notebook file for updating iit content table.

--- a/hotel_info.ipynb
+++ b/hotel_info.ipynb
@@ -85,6 +85,164 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4710c350-351a-43fe-aeb8-30e5362a342d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1922481a-7e14-4395-a6ae-af5922d31bd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine, func, select, Table, MetaData, distinct, update\n",
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "# Connect to your database (modify this URL to your database connection string)\n",
+    "engine = create_engine(\"mysql+pymysql://username:password@localhost/your_database_name\")\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "session = Session()\n",
+    "metadata = MetaData()\n",
+    "\n",
+    "# Reflect tables\n",
+    "hotel_info_all = Table('hotel_info_all', metadata, autoload_with=engine)\n",
+    "update_tracker = Table('update_tracker', metadata, autoload_with=engine)\n",
+    "\n",
+    "def get_unique_country_data():\n",
+    "    \"\"\"\n",
+    "    Fetch unique CountryCode values along with counts of unique GiDestinationId and list of GiDestinationId for each CountryCode.\n",
+    "    Returns a list of dictionaries with 'CountryCode', 'total_number', and 'gidestination_list'.\n",
+    "    \"\"\"\n",
+    "    # Query to get unique count and list of GiDestinationId per CountryCode\n",
+    "    query = (\n",
+    "        select(\n",
+    "            hotel_info_all.c.CountryCode,\n",
+    "            func.count(distinct(hotel_info_all.c.GiDestinationId)).label('total_number'),\n",
+    "            func.group_concat(distinct(hotel_info_all.c.GiDestinationId)).label('gidestination_list')\n",
+    "        )\n",
+    "        .group_by(hotel_info_all.c.CountryCode)\n",
+    "    )\n",
+    "    result = session.execute(query).fetchall()\n",
+    "\n",
+    "    # Format results into a list of dictionaries for easier processing\n",
+    "    country_data = [\n",
+    "        {\n",
+    "            'CountryCode': row['CountryCode'],\n",
+    "            'total_number': row['total_number'],\n",
+    "            'gidestination_list': row['gidestination_list']\n",
+    "        }\n",
+    "        for row in result\n",
+    "    ]\n",
+    "    return country_data\n",
+    "\n",
+    "def update_update_tracker_table(country_data):\n",
+    "    \"\"\"\n",
+    "    Update update_tracker table with CountryCode, total_number, and gidestination_list using `begin()` for immediate commits.\n",
+    "    \"\"\"\n",
+    "    with session.begin():  # Start a transaction\n",
+    "        for data in country_data:\n",
+    "            # Update the table based on CountryCode match\n",
+    "            update_stmt = (\n",
+    "                update(update_tracker)\n",
+    "                .where(update_tracker.c.CountryCode == data['CountryCode'])\n",
+    "                .values(\n",
+    "                    total_number=data['total_number'],\n",
+    "                    list=data['gidestination_list']\n",
+    "                )\n",
+    "            )\n",
+    "            session.execute(update_stmt)\n",
+    "    # No need for session.commit() since `begin()` commits immediately after each execution\n",
+    "\n",
+    "def main():\n",
+    "    # Step 1: Get unique CountryCode data with total number and GiDestinationId list\n",
+    "    country_data = get_unique_country_data()\n",
+    "    \n",
+    "    # Step 2: Update the update_tracker table with this data\n",
+    "    update_update_tracker_table(country_data)\n",
+    "    print(\"update_tracker table has been successfully updated.\")\n",
+    "\n",
+    "# Run the main function\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22633fa7-f823-44c2-8a8c-cd785b7a5cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0a816d-6465-4091-9270-061d8f9ce7a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e1aec6-253e-496c-8b0d-39975af75af4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d415113-d270-42b9-8129-ee1c66445343",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c24d308b-fe05-4265-95ac-34eafaf18e1d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46035602-8e89-4c64-a198-337891fc17d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04723e5b-b003-486e-a314-32082eafe75c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eb7bde7-36a0-4dde-898e-f7bda1eeca71",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c0b5b7-626a-4525-ad1b-3b3d43141ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "f4e3c0f0-ad0a-426b-8d31-6a2d1a15b46c",
    "metadata": {},
