--- a/database_with_jupyter.ipynb
+++ b/database_with_jupyter.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6db7dae1-a288-4224-ae4d-1e7b3937e06d",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,6 @@
     }
    ],
    "source": [
-    "\n",
     "try:\n",
     "    with engine.connect() as connection:\n",
     "        result = connection.execute(text(\"SELECT DATABASE()\"))\n",
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "21b7f98e-d49e-4b77-9146-425688f286c0",
    "metadata": {},
    "outputs": [
@@ -189,7 +188,7 @@
     "\n",
     "# Usage example\n",
     "table = \"vervotech_hotel_list\"\n",
-    "data = get_some_rows(table, engine, 100000)"
+    "# data = get_some_rows(table, engine, 100000)"
    ]
   },
   {
