Add gill runner this section.

--- a/gill_with_update_iit_table.ipynb
+++ b/gill_with_update_iit_table.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "864d4d6a-64ac-4a8b-83c8-08c9b36bcfc7",
    "metadata": {},
    "outputs": [
@@ -229,12 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d8944e3d-40f1-4c2e-be72-397660f193f4",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data updated successfully in innova_hotels_main.\n"
+     ]
+    }
+   ],
    "source": [
     "from sqlalchemy import create_engine, Table, MetaData, text\n",
     "from sqlalchemy.orm import sessionmaker\n",
@@ -282,7 +290,7 @@
     "# Function to escape single quotes in string values\n",
     "def escape_single_quotes(value):\n",
     "    if isinstance(value, str):\n",
-    "        return value.replace(\"'\", \"''\")  # Escape single quotes\n",
+    "        return value.replace(\"'\", \"''\")  \n",
     "    return value\n",
     "\n",
     "try:\n",
@@ -303,7 +311,7 @@
     "\n",
     "            # Map JSON content to 'innova_hotels_main' columns\n",
     "            for target_col, json_key in json_mapping.items():\n",
-    "                if target_col == 'PrimaryPhoto':  # Special handling for the first image URL\n",
+    "                if target_col == 'PrimaryPhoto': \n",
     "                    # Check if imageUrls is not empty\n",
     "                    image_urls = hotel_info.get('imageUrls', [])\n",
     "                    if image_urls:\n",
@@ -319,8 +327,8 @@
     "                    keys = json_key.split('.') \n",
     "                    value = hotel_info\n",
     "                    for key in keys:\n",
-    "                        value = value.get(key) if value else None  # Traverse JSON, set None if key not found\n",
-    "                    data[target_col] = value if value is not None else None  # Default to None if missing\n",
+    "                        value = value.get(key) if value else None \n",
+    "                    data[target_col] = value if value is not None else None  \n",
     "\n",
     "            \n",
     "            data['SupplierCode'] = 'oryx'\n",
@@ -333,10 +341,9 @@
     "                    data[col.name] = None\n",
     "\n",
     "            # Use raw SQL for ON DUPLICATE KEY UPDATE\n",
-    "            # Prepare the insert SQL statement with ON DUPLICATE KEY UPDATE\n",
     "            columns = ', '.join(data.keys())  # Column names\n",
-    "            values = ', '.join([f\"'{v}'\" if v is not None else 'NULL' for v in data.values()])  # Values\n",
-    "            update_clause = ', '.join([f\"{col} = VALUES({col})\" for col in data.keys()])  # Update values on conflict\n",
+    "            values = ', '.join([f\"'{v}'\" if v is not None else 'NULL' for v in data.values()])  \n",
+    "            update_clause = ', '.join([f\"{col} = VALUES({col})\" for col in data.keys()]) \n",
     "            \n",
     "            # Construct the full SQL statement\n",
     "            sql = f\"\"\"\n",
