--- a/gill_with_update_iit_table.ipynb
+++ b/gill_with_update_iit_table.ipynb
@@ -126,7 +126,10 @@
     "    'HotelReview': 'tripAdvisorRating',\n",
     "    'DestinationId': 'giDestinationId',\n",
     "    'Amenities_1': 'masterRoomAmenities',\n",
-    "    'Amenities_2': 'masterHotelAmenities'\n",
+    "    'Amenities_2': 'masterHotelAmenities',\n",
+    "    'Amenities_3': 'masterHotelAmenities',\n",
+    "    'Amenities_4': 'masterHotelAmenities',\n",
+    "    'Amenities_5': 'masterHotelAmenities'\n",
     "}\n",
     "\n",
     "# Start a session and use the 'begin()' method to ensure data is saved immediately\n",
